--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Jul 30 15:23:17 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* Makefile.am configure.in xmlsec-gnutls.pc.in xmlsec-nss.pc.in 
+	xmlsec-openssl.pc.in xmlsec.pc.in: more *.pc files fixes
+	for the same bug #118685
+
 Wed Jul 30 11:49:20 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* Makefile.am configure.in xmlsec-gnutls.pc.in xmlsec-nss.pc.in 
