--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon 04 Aug 2003 04:06:02 PM PDT Aleksey Sanin  <aleksey@aleksey.com>
+	
+	* docs: rebuilding docs to get nss api reference
+
 Mon Aug  4 14:47:02 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* Makefile.am xmlsec.spec.in: added HACKING file to the distribution
