fixed broken doc files

--- a/man/xmlsec1-config.1
+++ b/man/xmlsec1-config.1
@@ -31,5 +31,5 @@ output version information
 .TP
 \fB\-\-crypto\fR=\fILIB\fR
 configure with XMLSEC crypto library (one of the
-following: none default  openssl gnutls nss)
+following: none default  openssl nss)
 [default "openssl"]
