second mscrypto patch from Wouter

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,4 +5,5 @@ Contibutions:
 Windows port: Igor Zlatkovic <igor@stud.fh-frankfurt.de>
 Debian port: John Belmonte  <jvb@prairienet.org> 
 NSS port: Tej Arora (tej@netscape.com)
+mscrypto port: Wouter Ketting <wsh@xs4all.nl>
 
