--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Sep  9 12:52:00 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* Makefile.am apps/* configure.in include/* src/* tests/*: implemented
+	loading xmlsec-crypto libraries as plugins
+	* win32/: change build to allow building of more than one
+	xmlsec-crypto library
+
 Sun 24 Aug 2003 05:20:14 PM PDT  Aleksey Sanin  <aleksey@aleksey.com>
 	
 	* docs/faq.html: upgraded licenses FAQ section to include
