--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Sep 10 18:12:52 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* xmlsec.spec.in: separated xmlsec and xmlsec-devel RPM
+	pacakges into xmlsec, xmlsec-openssl, xmlsec-devel and xmlsec-openssl-devel
+
 Wed Sep 10 13:19:10 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* include/xmlsec/version.h include/xmlsec/version.h.in 
