--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Sep 11 16:39:18 2003 Aleksey Sanin  <aleksey@aleksey.com>
+
+	* src/ltdl.* src/Makefile.am: upgraded to ltdl from libtool 1.4
+	
 Wed Sep 10 18:12:52 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* xmlsec.spec.in: separated xmlsec and xmlsec-devel RPM
