--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Sep 16 11:28:03 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* docs/download.html docs/index.html docs/news.html: preparation
+	for 1.1.2 release
+
 Tue Sep 16 02:28:41 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* src/Makefile.am: link xmlsec lib with dl librarias
