--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat 20 Sep 2003 11:19:14 AM PDT Aleksey Sanin  <aleksey@aleksey.com>
+
+	* HACKING: added more info about hacking with xmlsec
+
 Tue Sep 16 11:28:03 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* docs/download.html docs/index.html docs/news.html: preparation
