added "authors and contributors" page regenerated docs to include
* docs/authors.html: added "authors and contributors" page
* docs/ man/: regenerated docs to include xmlsec-mscrypto and link to ne        authors.html page
* include/ src/: api reference documentation updates

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,6 @@
 Aleksey Sanin  <aleksey@aleksey.com>
-
-Contibutions:
---------------------------------------------------------
 Windows port: Igor Zlatkovic <igor@stud.fh-frankfurt.de>
 Debian port: John Belmonte  <jvb@prairienet.org> 
-NSS port: Tej Arora (tej@netscape.com)
+NSS port: Tej Arora <tej@netscape.com>
 mscrypto port: Wouter Ketting <wsh@xs4all.nl>
 
