--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Sep 25 23:10:19 2003  Aleksey Sanin  <aleksey@aleksey.com>
+	
+	* docs/authors.html: added "authors and contributors" page
+	* docs/ man/: regenerated docs to include xmlsec-mscrypto and link to new
+	authors.html page
+	* include/ src/: api reference documentation updates
+
 Thu Sep 25 20:47:11 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* include/xmlsec/keysdata.h: introduced new cert-pem and cert-der
