--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed 01 Oct 2003 09:11:58 AM PDT Aleksey Sanin  <aleksey@aleksey.com>
+
+	* include/xmlsec/dl.h: moved closing bracket for "extern "C"
+	a couple lines up to be in the right place (bug #123640)
+
 Mon 29 Sep 2003 07:27:14 PM PDT Aleksey Sanin  <aleksey@aleksey.com>
 
 	* docs/download.html docs/index.html docs/news.html: preparation
