correction from wouter

--- a/src/mscrypto/README
+++ b/src/mscrypto/README
@@ -46,7 +46,7 @@ KNOWN ISSUES.
 3) Actual AES Crypto provider name is different from the "official" one
 (http://bugzilla.gnome.org/show_bug.cgi?id=123674).
 
-4) The only supported file formats are PKCS#8, PKCS#12 and DER certificates
+4) The only supported file formats are PKCS#12 and DER certificates
 (http://bugzilla.gnome.org/show_bug.cgi?id=123675).
 
 
